k8s/apps/leachnet/ln-home/scrypted/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted
spec:
  ports:
  - name: https
    port: 9443
    targetPort: https
  selector:
    app: scrypted
